# run-today

./: Cargo.toml  LICENSE  Notes.md  README.md
src/: app_command.rs  config.rs  data.rs  macros.rs  main.rs  options.rs
src/app_command/: add.rs  add_command.rs  info.rs  last_run.rs  last_run_command.rs  list.rs  list_command.rs  remove.rs  remove_command.rs  run.rs  run_command.rs
src/config/: last_run.rs  program.rs  programs.rs
src/data/: consts.rs  last_run.rs  paths.rs  program.rs  programs.rs
