[package]
name = "run-today"
version = "0.2.0"
authors = ["Paul Sobolik <psobolik@zoho.com>"]
description = "Runs a list of programs no more than once a day"
license = "MIT"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
directories = "6.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.136"
clap = { version = "4.5.26", features = ["derive"] }
colored = "3.0.0"
unicode-segmentation = "1.12.0"
